facebook en contacto

--- a/frigorificosj/index.html
+++ b/frigorificosj/index.html
@@ -586,6 +586,13 @@
                                                 (0264) 156723834
                                             </span>
                                         </div>
+
+                                        <div class="data">
+                                            <i class="fa fa-facebook"></i>
+                                            <span>
+                                                <a href="https://www.facebook.com/Frigorifico.San.Juan/">Frigorifico San Juan</a>                                       
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div id="map-canvas"></div>
