--- a/Frigorifico Napoli/index.html
+++ b/Frigorifico Napoli/index.html
@@ -539,7 +539,7 @@
 <div id="trabajarModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Pre fritos</h3>
+        <h3 id="myModalLabel">Trabajá con nosotros</h3>
     </div>
     <div class="modal-body">
         <form class="form-horizontal" role="form" method="post" action="index.php">
