cambios en las imágenes de clientes

--- a/frigorificosj/index.html
+++ b/frigorificosj/index.html
@@ -320,8 +320,11 @@
                                         <div class="flip-container text-center" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
                                                 <div class="front">
-                                                    <i style="visibility: hidden" class="fa fa-mobile"></i>
-                                                    <h5>Guarda de<br>vino</h5>
+                                                    <div class="team-member-box center-block text-center">
+                                                        <img src="assets/img/fsjser8.jpg" class="img-responsive img-clientes">
+                                                        <h4 class="">Guarda de vino</h4>
+                                                        <p class="text-uppercase"></p>
+                                                    </div>
                                                 </div>
                                                 <div class="back">
                                                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Guarda de vino&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
@@ -337,8 +340,11 @@
                                         <div class="flip-container text-center" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
                                                 <div class="front">
-                                                    <i style="visibility: hidden" class="fa fa-lightbulb-o"></i>
-                                                    <h5>Guarda de<br>mosto</h5>
+                                                    <div class="team-member-box center-block text-center">
+                                                        <img src="assets/img/fsjser1.jpg" class="img-responsive img-clientes">
+                                                        <h4 class="">Guarda de mosto</h4>
+                                                        <p class="text-uppercase"></p>
+                                                    </div>
                                                 </div>
                                                 <div class="back">
                                                     <!-- <i class="fa fa-lightbulb-o fa-fw"></i> -->
@@ -355,8 +361,11 @@
                                         <div class="flip-container text-center" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
                                                 <div class="front">
-                                                    <i style="visibility: hidden" class="fa fa-paint-brush"></i>
-                                                    <h5 style="bottom: 45%">Exportaci&oacute;n</h5>
+                                                    <div class="team-member-box center-block text-center">
+                                                        <img src="assets/img/fsjser2.jpg" class="img-responsive img-clientes">
+                                                        <h4 class="">Exportaci&oacute;n</h4>
+                                                        <p class="text-uppercase"></p>
+                                                    </div>
                                                 </div>
                                                 <div class="back">
                                                     <!-- <i class="fa fa-paint-brush fa-fw"></i> -->
