bajar calidad menu

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -65,7 +65,7 @@
 		   			</div>		   			
 	    			<!--<h1>UN RINCON DE NÁPOLI<br/>RESTAURANTE Y PIZZERÍA</h1>-->
 	    			<hr class="aligncenter">
-	    			<p>Una breve descripcion del restaurante, unos pocos caracteres. 80 son suficientes.</p>
+	    			<p>Somos la tradición del sabor en San Juan.</p>
 	    			<!--
 	    			<div class="col-md-10 col-md-offset-1 centered mt">
 						<form role="form" action="register.php" method="post" enctype="plain"> 
