--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/ionicons.min.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="assets/css/catslider.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
@@ -92,8 +92,15 @@
 			</div><!--/col-md-6 -->
 
 			<div class="col-md-4 centered">
+				<i class="ion-knife og"></i>
+				<h5>PROINCIPIOS/VALORES/FUTURO</h5>
+				<p class="text-p"><b>(UN PARRAFO DE 500 CARACTERES SERIA IDEAL)</b> Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
+			</div><!--/col-md-6 -->
+
+			<div class="col-md-4 centered">
 				<i class="ion-spoon og"></i>
 				<h5>SERVICIOS</h5>
+				<!--
 				<ul class="text-p">
 					• Ambiente climatizado</br>
 					• Amplio y variado menú</br>
@@ -108,12 +115,9 @@
 					• Vasto menú de bebidas, jugos y licuados naturales</br>
 					• Capacidad para 150 personas (interior)</br>
 				</ul>
-			</div><!--/col-md-6 -->
-			
-			<div class="col-md-4 centered">
-				<i class="ion-knife og"></i>
-				<h5>PROINCIPIOS/VALORES/FUTURO</h5>
-				<p class="text-p"><b>(UN PARRAFO DE 500 CARACTERES SERIA IDEAL)</b> Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
+				-->
+				<p class="text-p">Ambiente climatizado // Amplio y variado menú // Menú del día // Delivery las 24hs // Mesas en el interior del local o al aire libre // Reservas con precios especiales para grupos o contingentes // Platos especiales para: Celíacos, Diabéticos, Veganos, Vegetarianos // Esmerada atención. Tiempo de espera aprox: 15 min // Amplio horario de atención // Desayunos – Almuerzo – Merienda – Cena – Café // Vasto menú de bebidas, jugos y licuados naturales // Capacidad para 150 personas (interior)
+				</p>
 			</div><!--/col-md-6 -->
 
 		</div><!--/row -->
@@ -368,6 +372,13 @@
 				-->
 
 			</div><!--/row -->
+				<p class="text-p centered mt down">
+					<a href="https://www.facebook.com/pages/En-Un-Rincon-De-Napoli/321146061316728?fref=ts"><i class="ion-social-facebook"></i></a>
+					<a href="http://www.tripadvisor.com.ar/Restaurant_Review-g312785-d3180710-Reviews-Un_Rincon_de_Napoli-San_Juan_Province_of_San_Juan_Cuyo.html
+"><i><img src="assets/img/tripadvisor.png" style="height: 35px; width: 35px;" /></i></a>
+					<a href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
+"><i class="ion-social-foursquare"></i></a>
+				</p>
 				<!-- <p class="text-p centered mt">Copyright 2015 - LandingSumo.com</p> -->
 		</div><!--/container -->
 	</div><!--/footer -->
