correction link sociales

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -373,10 +373,10 @@
 
 			</div><!--/row -->
 				<p class="text-p centered mt down">
-					<a href="https://www.facebook.com/pages/En-Un-Rincon-De-Napoli/321146061316728?fref=ts"><i class="ion-social-facebook"></i></a>
-					<a href="http://www.tripadvisor.com.ar/Restaurant_Review-g312785-d3180710-Reviews-Un_Rincon_de_Napoli-San_Juan_Province_of_San_Juan_Cuyo.html
+					<a target="_blank" href="https://www.facebook.com/pages/En-Un-Rincon-De-Napoli/321146061316728?fref=ts"><i class="ion-social-facebook" ></i></a>
+					<a target="_blank" href="http://www.tripadvisor.com.ar/Restaurant_Review-g312785-d3180710-Reviews-Un_Rincon_de_Napoli-San_Juan_Province_of_San_Juan_Cuyo.html
 "><i><img src="assets/img/tripadvisor.png" style="height: 35px; width: 35px;" /></i></a>
-					<a href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
+					<a target="_blank" href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
 "><i class="ion-social-foursquare"></i></a>
 				</p>
 				<!-- <p class="text-p centered mt">Copyright 2015 - LandingSumo.com</p> -->
