cambios sugeridos agus

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -45,7 +45,7 @@
           <a class="navbar-brand" href="#"><img src="assets/img/logo.png" width="30"></a>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right" style="cursor: pointer;">
             <li class="active"><a href="#">Inicio</a></li>
             <li><a href="#platos">Platos</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -144,43 +144,43 @@
 			              		<h4><b>Chizpy Carter</b></h4>
 			              		<!--<h6>TOP CHEF</h6>-->
 			              		<p class="rating">
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
 			              		</p>
 			              		<br>
-			                	<p>Lo conoci por mi marido. Y me encanto, es mi lugar para comer y siempre q puedo voy. Plato recomendado lasañas!!!!</p> 
+			                	<p><p class="text-p" ><i style="font-size: 18px;">"Lo conoci por mi marido. Y me encanto, es mi lugar para comer y siempre q puedo voy. Plato recomendado lasañas!!!!"</i></p> 
 	              			</div>
 
 	              			<div class="col-md-4 col-sm-12">
 			              		<h4><b>Bettina Manrique</b></h4>
 			              		<!--<h6>TOP CHEF</h6>-->
 			              		<p class="rating">
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
 			              		</p>
 			              		<br>
-			                	<p>Me encanta tengo muy buenos amigos! ! Un lugar muy familiar y tranquilo.</p> 
+			                	<p class="text-p" ><i style="font-size: 18px;">"Me encanta tengo muy buenos amigos! ! Un lugar muy familiar y tranquilo."</i></p> 
 	              			</div>
 
 	              			<div class="col-md-4 col-sm-12">
 			              		<h4><b>Fernando Andrada</b></h4>
 			              		<!--<h6>TOP CHEF</h6>-->
 			              		<p class="rating">
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
-				              		<i class="ion-ios7-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
+				              		<i class="ion-ios-star"></i>
 				              		<!-- <i class="ion-ios7-star-half"></i> -->
 			              		</p>
 			              		<br>
-			                	<p>Se come barato, abundante y bueno. Viajo a San Juan para comer ahí y pasar por La difunta y San Expedito lo más seguido que puedo!!!</p> 
+			                	<p class="text-p" ><i style="font-size: 18px;">"Se come barato, abundante y bueno. Viajo a San Juan para comer ahí y pasar por La difunta y San Expedito lo más seguido que puedo!!!"</i></p> 
 	              			</div>
 	              		</div><!-- /row -->
 	              </div><!-- /tab-pane -->
@@ -237,7 +237,7 @@
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
 	        <h5 class="modal-title" id="myModalLabel">Pizza a la priedra</h5>
 	      </div>
 	      <div class="modal-body">
@@ -247,7 +247,7 @@
 			  <h5>Desde.......... $95 (grande) / $50 (chica) / $30 (pizzeta)</h5>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
 	      </div>
 	    </div>
 	  </div><!--/modal-dialog -->
@@ -258,7 +258,7 @@
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
 	        <h5 class="modal-title" id="myModalLabel">Lasagna</h5>
 	      </div>
 	      <div class="modal-body">
@@ -268,7 +268,7 @@
 			  <h5>Desde.......... $80</h5>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
 	      </div>
 	    </div>
 	  </div><!--/modal-dialog -->
@@ -279,7 +279,7 @@
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
 	        <h5 class="modal-title" id="myModalLabel">Paella</h5>
 	      </div>
 	      <div class="modal-body">
@@ -289,7 +289,7 @@
 			  <h5>Desde.......... $no se el precio</h5>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
 	      </div>
 	    </div>
 	  </div><!--/modal-dialog -->
