--- a/supermercado/index.html
+++ b/supermercado/index.html
@@ -339,11 +339,18 @@
       function initialize() {
         var mapCanvas = document.getElementById('map');
         var mapOptions = {
-          center: new google.maps.LatLng(44.5403, -78.5463),
-          zoom: 8,
+          center: new google.maps.LatLng(-31.536750, -68.528107),
+          zoom: 15,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         }
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(-31.536750, -68.528107),
+            title:"Frigorifico San Juan"
+        });
+
         var map = new google.maps.Map(mapCanvas, mapOptions)
+
+        marker.setMap(map);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
