--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -29,6 +29,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
 
   <body>
@@ -43,12 +44,14 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#"><img src="assets/img/logo.png" width="30"></a>
+          <div style="font-style: italic; color: #B61722; width: 500px; margin-top: 15px; margin-left: 0px; padding-left: 50px;">La Tradición de San Juan</div>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right" style="cursor: pointer;">
-            <li class="active"><a href="#">Inicio</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="#platos">Platos</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li class="active"><a data-toggle="modal" href="#delivery" title="Terms of Use">Delivery las 24hs</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -79,6 +82,25 @@
 	    </div><!-- /.container -->
 	</div><!--/ H -->
 
+	<!-- Modal -->
+	<div class="modal fade" id="delivery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <p class="text-p" id="myModalLabel" style="font-size: 18px; color: #B61722">Teléfonos</p>
+	      </div>
+	      <div class="modal-body" style="text-align: center;">
+	      		<br />
+  				<p>(0264) 4227221<br />
+  				(0264) 4223241<br />
+  				(0264) 155278021</p>
+  		  </div>
+    	  	<br />
+	  </div>
+	  </div>
+	</div>
+
 	<!-- ********** WHITE SECTION ********** -->
 	<div class="container">
 		<div class="row mtb centered">
@@ -88,36 +110,50 @@
 			<div class="col-md-4 centered">
 				<i class="ion-fork og"></i>
 				<h5>HISTORIA</h5>
-				<p class="text-p"><b>(UN PARRAFO DE 500 CARACTERES SERIA IDEAL)</b> Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
+				<p class="text-p">"Pascual Velardita, fundador del restaurante, emigra desde Italia e incursiona en diferentes rubros trabajando desde muy joven.
+En 1972 compra una pizzería, y con la ayuda de Susana Gonzalez comienzan a transitar un camino de sacrificio, esfuerzo y mucha dedicación.
+Pensando en el progreso, anexan una panadería y producen todos los insumos para la pizzería, asegurando desde el inicio la calidad. 
+Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un reconocimiento y una tradición inigualable."</p>
 			</div><!--/col-md-6 -->
 
 			<div class="col-md-4 centered">
 				<i class="ion-knife og"></i>
-				<h5>PROINCIPIOS/VALORES/FUTURO</h5>
-				<p class="text-p"><b>(UN PARRAFO DE 500 CARACTERES SERIA IDEAL)</b> Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
+				<h5>NUESTROS VALORES</h5>
+				<p class="text-p" style="padding-right: 30px;">Nuestros valores son la base de nuestra cultura. Es por eso que nos apegamos a estos valores, elegidos por nuestro personal:
+					<ul style="display:inline-block; text-p; color: #6b6b6b;">
+						<li style="text-align: left;">Progreso</li>
+						<li style="text-align: left;">Disciplina</li>
+						<li style="text-align: left;">Honestidad</li>
+						<li style="text-align: left;">Confianza</li>
+						<li style="text-align: left;">Ética Profesional</li>
+					</ul>
+				</p>
 			</div><!--/col-md-6 -->
 
-			<div class="col-md-4 centered">
+			<div class="col-md-4 centered" style="border-left: 1px dashed #6b6b6b;">
 				<i class="ion-spoon og"></i>
 				<h5>SERVICIOS</h5>
+				<p class="text-p">
+					<ul style="display:inline-block; text-p; color: #6b6b6b; text-align: left; padding-left: 30px;">
+						• Ambiente climatizado<br />
+						• Amplio y variado menú</br>
+						• Menú del día</br>
+						• Delivery las 24hs</br>
+						• Mesas en el interior del local o al aire libre</br>
+						• Reservas con precios especiales para grupos o contingentes</br>
+						• Platos especiales para: Celíacos, Diabéticos, Veganos, Vegetarianos</br>
+						• Esmerada atención. Tiempo de espera aprox: 15 min</br>
+						• Amplio horario de atención</br>
+						• Desayunos – Almuerzo – Merienda – Cena – Café</br>
+						• Vasto menú de bebidas, jugos y licuados naturales</br>
+						• Capacidad para 150 personas (interior)</br>
+					</ul>
+				</p>
+
 				<!--
-				<ul class="text-p">
-					• Ambiente climatizado</br>
-					• Amplio y variado menú</br>
-					• Menú del día</br>
-					• Delivery las 24hs</br>
-					• Mesas en el interior del local o al aire libre</br>
-					• Reservas con precios especiales para grupos o contingentes</br>
-					• Platos especiales para: Celíacos, Diabéticos, Veganos, Vegetarianos</br>
-					• Esmerada atención. Tiempo de espera aprox: 15 min</br>
-					• Amplio horario de atención</br>
-					• Desayunos – Almuerzo – Merienda – Cena – Café</br>
-					• Vasto menú de bebidas, jugos y licuados naturales</br>
-					• Capacidad para 150 personas (interior)</br>
-				</ul>
-				-->
 				<p class="text-p">Ambiente climatizado // Amplio y variado menú // Menú del día // Delivery las 24hs // Mesas en el interior del local o al aire libre // Reservas con precios especiales para grupos o contingentes // Platos especiales para: Celíacos, Diabéticos, Veganos, Vegetarianos // Esmerada atención. Tiempo de espera aprox: 15 min // Amplio horario de atención // Desayunos – Almuerzo – Merienda – Cena – Café // Vasto menú de bebidas, jugos y licuados naturales // Capacidad para 150 personas (interior)
 				</p>
+				-->
 			</div><!--/col-md-6 -->
 
 		</div><!--/row -->
@@ -224,7 +260,7 @@
 					</ul>
 					-->
 					<nav>
-						<a onclick="javascript:window.open('menu.html');" style=" cursor: auto;">Ver menú completo</a>
+						<a style="cursor: pointer;" onclick="javascript:window.open('menu.html');" style=" cursor: auto;">Ver menú completo</a>
 					</nav>
 				</div>
 			</div><!--/col-md-10 -->
@@ -308,16 +344,16 @@
 				<hr class="mb">
 				<p class="text-p">Somos muy reconocidos en la sociedad sanjuanina y entre los turistas. Contamos con 9 “Mercurios de Oro a la Popularidad” y 1 “Pecherón”.</p>
 				<p class="down">
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-a"></i>
-					<i class="ion-ribbon-b"></i>
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<img src="assets/img/mercurio.png" style="width: 35px;">
+					<!-- <i class="ion-ribbon-b"></i> -->
 				</p>
 			</div>
 			
@@ -327,6 +363,8 @@
 	
 		</div><!--/row -->
 	</div><!--/container -->
+
+
 
 	<!-- ********** FOOTER SECTION ********** -->	
 	<div id="f">
@@ -372,13 +410,19 @@
 				-->
 
 			</div><!--/row -->
-				<p class="text-p centered mt down">
-					<a target="_blank" href="https://www.facebook.com/pages/En-Un-Rincon-De-Napoli/321146061316728?fref=ts"><i class="ion-social-facebook" ></i></a>
-					<a target="_blank" href="http://www.tripadvisor.com.ar/Restaurant_Review-g312785-d3180710-Reviews-Un_Rincon_de_Napoli-San_Juan_Province_of_San_Juan_Cuyo.html
+
+		    <!-- ********** MAP********** -->
+		    <br /><br />
+		    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3400.5467474908546!2d-68.5289937!3d-31.5366065!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6a207b59709c1748!2sUn+Rincon+de+Napoli!5e0!3m2!1ses!2sar!4v1450884443044" width="100%" height="400" frameborder="0" style="border:0" scrollwheel="false" allowfullscreen></iframe>
+
+			<p class="text-p centered mt down">
+				<a target="_blank" href="https://www.facebook.com/pages/En-Un-Rincon-De-Napoli/321146061316728?fref=ts"><i class="ion-social-facebook" ></i></a>
+				<a target="_blank" href="http://www.tripadvisor.com.ar/Restaurant_Review-g312785-d3180710-Reviews-Un_Rincon_de_Napoli-San_Juan_Province_of_San_Juan_Cuyo.html
 "><i><img src="assets/img/tripadvisor.png" style="height: 35px; width: 35px;" /></i></a>
-					<a target="_blank" href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
+				<a target="_blank" href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
 "><i class="ion-social-foursquare"></i></a>
-				</p>
+			</p>
+
 				<!-- <p class="text-p centered mt">Copyright 2015 - LandingSumo.com</p> -->
 		</div><!--/container -->
 	</div><!--/footer -->
