cambio index resto

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -130,7 +130,7 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 				</p>
 			</div><!--/col-md-6 -->
 
-			<div class="col-md-4 centered" style="border-left: 1px dashed #6b6b6b;">
+			<div class="col-md-4 centered" style="border-left: 1px solid #CCCCCC;">
 				<i class="ion-spoon og"></i>
 				<h5>SERVICIOS</h5>
 				<p class="text-p">
@@ -379,12 +379,12 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	      			<div class="col-md-3 col-sm-12 centered">
 	      				<h5>CLIENTES Y PROVEEDORES</h5>
 	      				<p class="text-p">Ponete en contacto con nosotros enviandonos un mail a esta dirección.</p>
-	      				<a href="mailto:proveedores@supernápoli.com.ar" title="Email">proveedores@supernápoli.com.ar</a>
+	      				<a href="mailto:proveedores@supernapoli.com.ar" title="Email">proveedores@supernapoli.com.ar</a>
 	      			</div>
 	      			<div class="col-md-3 col-sm-12 centered">
 	      				<h5>TRABAJÁ CON NOSOTROS</h5>
 	      				<p class="text-p">Si querés ser parte de nuestro equipo de trabajo hace click en el siguiente botón de contacto.</p>
-	      				<a data-toggle="modal" href="#trabaja" title="Terms of Use">Trabajá con nosotros</a>
+	      				<a data-toggle="modal" href="#trabaja" title="Trabajá con nosotros">Trabajá con nosotros</a>
 	      			</div>
 	      			<div class="col-md-3 col-sm-12 centered">
 	      				<h5>HORARIOS</h5>
