--- a/frigorifico_napoli/index.html
+++ b/frigorifico_napoli/index.html
@@ -187,7 +187,7 @@
                         <div id="granjaModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h3 id="myModalLabel">La Granja</h3>
+                                <h3 id="myModalLabel">Productos de elaboración propia</h3>
                             </div>
                             <div class="modal-body">
                                 <!--<h4>Text in a modal</h4>-->
@@ -376,13 +376,13 @@
 
                         <div class="span3">
                         <a data-toggle="modal" href="#salchicasModal"><img src="images/home-salchichas.jpg" class="img-rounded" style="margin:5px 0px 15px;" alt=""></a>
-                        <h5 class="well" style="margin-top: -20px; text-align: center;">Salchicas</h5>
+                        <h5 class="well" style="margin-top: -20px; text-align: center;">Salchichas</h5>
 
                         </div>
                         <div id="salchicasModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h3 id="myModalLabel">Salchicas</h3>
+                                <h3 id="myModalLabel">Salchichas</h3>
                             </div>
                             <div class="modal-body">
                                 <!--<h4>Text in a modal</h4>-->
